# robot_dataset_pipeline_stu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
config/: example_config.yaml
docs/: STUDENT_GUIDE.md
examples/: example_usage.py
robot_dataset_pipeline/: __init__.py  config_model.py  convert_cli.py  exporter.py  reader.py  serializer.py
robot_dataset_pipeline/common/: relative_transform.py  transformbuffer.py  utils.py
